--- a/index.html
+++ b/index.html
@@ -6,23 +6,190 @@
     <link rel="styleSheet" type="text/css" href="./assets/css/style.css">
     <link rel="styleSheet" type="text/css" href="./assets/fontAwesome/css/all.css"/>
     <link rel="styleSheet" type="text/css" href="./bootstrap/css/bootstrap.min.css"/>
+    <link rel="styleSheet" type="text/css" href="./assets/OwlCarousel/owl.carousel.min.css"/>
     <title>Quick Deal</title>
 </head>
 <body>
     <header>
-        <div class="topbar">
-            <div class="d-flex align-items-center justify-between w-100">
+        <div class="topbar px-3">
+            <div class="d-flex align-items-center justify-content-between w-100">
                 <div class="right-block">
-                    <div class="">
-
+                    <div class="d-flex">
+                        <div class="mx-2">
+                            <span class="text-white mx-0 text-small"><i class="far fa-envelope"></i></span>
+                            <span class="text-white mx-1 text-small">QuickDeal@gmail.com</span>
+                        </div>
+                        <div>
+                            <span class="text-white mx-0 text-small text-small"><i class="fas fa-phone"></i></span>
+                            <span class="text-white mx-1 text-small text-small">+91 996699669</span>
+                        </div>
                     </div>
                 </div>
-                <div class="left-block">test</div>
+                <div class="left-block">
+                    <div class="d-flex">
+                        <div class="mx-2 text-small">
+                            <span class="text-white mx-1"><i class="fab fa-instagram"></i></span>
+                            <span class="text-white mx-1"><i class="fab fa-whatsapp"></i></span>
+                            <span class="text-white mx-1"><i class="fab fa-facebook"></i></span>
+                            <span class="text-white mx-1"><i class="fab fa-twitter"></i></span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <nav class="navbar navbar-expand-lg mx-auto navbar-light p-3 bg-white shadow-sm mx-auto">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="d-flex align-items-center justify-content-between w-100">
+                <div class="logo">
+                    <a class="navbar-brand" href="#">
+                      <img src="./assets/Images/logo.jpeg" class="img-fluid" alt=""/>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                  <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Service</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Reels</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Sell</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home Loan</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">QD-agents</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pro-registrations</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                  </ul>
+  
+                </div>
+                <div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle rounded border radious-50" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                          D
+                        </button>
+                        <ul class="dropdown-menu right-0" aria-labelledby="dropdownMenuButton1">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </nav>
     </header>
+    <main>
+      <div class="main-section">
+        <div class="Headings">
+          <h1><span class="first mx-2">DIRECT</span>SELL IT<span class="second mx-2">BUY</span></h1>
+          <span class="icon"><i class="fas fa-angle-down"></i></span>
+        </div>
+        <div class="search-card">
+          <div class="buy">
+            <span>Buy</span>
+          </div>
+          <input type="text" class="form-control" placeholder="Search by Locality city,project">
+          <div class="Search">
+            <span><i class="fas fa-search"></i></span>
+          </div>
+        </div>
+        <div class="slider-status">
+          <div class="row mx-0">
+            <div class="col-md-12 px-0">
+              <div class="slider-child">
+                <div class="owl-carousel owl-theme">
+                  <div class="item">
+                    <div class="slider-file">
+                      <label for="fileUpload" class="text-center">
+                        +
+                        <p>Property</p>
+                      </label>
+                      <input type="file" id="fileUpload"/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-img.jpeg" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-2.jpg" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-3.png" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-3.png" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-1.webp" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-1.webp" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-5.jpg" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-6.jpg" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="img">
+                      <img src="./assets/Images/px-7.jpg" class="img-fluid" alt=""/>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+         
+        </div>
+        <div class="banner-slide">
+          <div class="banner-1">
+            <img src="./assets/Images/b-final.png" alt="" class="img-fluid"/>
+          </div>
+         
+        </div>
+      </div>
+    </main>
+    <script src="./assets/js/jquery-3.7.1.js.js"></script>
+    <script src="./assets/js/app.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/popper.min.js"></script>
+    <script src="./assets/OwlCarousel/owl.carousel.min.js"></script>
+    <script src="./assets/OwlCarousel/owl.carousel.js"></script>
     <script src="./assets/js/gsap.min.js"></script>
     <script src="assets/js/ScrollTrigger.min.js"></script>
 </body>
