--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" type="text/css" href="./assets/css/style.css">
-    <link rel="styleSheet" type="text/css" href="./assets/fontAwesome/css/all.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="styleSheet" type="text/css" href="./assets/fontAwesome/css/fontawesome.min.css"/>
     <link rel="styleSheet" type="text/css" href="./bootstrap/css/bootstrap.min.css"/>
     <link rel="styleSheet" type="text/css" href="./assets/OwlCarousel/owl.carousel.min.css"/>
     <title>Quick Deal</title>
@@ -97,7 +98,7 @@
         </nav>
     </header>
     <main>
-      <div class="main-section">
+      <div class="main-section theme-section">
         <div class="Headings">
           <h1><span class="first mx-2">DIRECT</span>SELL IT<span class="second mx-2">BUY</span></h1>
           <span class="icon"><i class="fas fa-angle-down"></i></span>
@@ -115,7 +116,7 @@
           <div class="row mx-0">
             <div class="col-md-12 px-0">
               <div class="slider-child">
-                <div class="owl-carousel owl-theme">
+                <div class="owl-carousel status-slider owl-theme">
                   <div class="item">
                     <div class="slider-file">
                       <label for="fileUpload" class="text-center">
@@ -178,11 +179,178 @@
         </div>
         <div class="banner-slide">
           <div class="banner-1">
-            <img src="./assets/Images/b-final.png" alt="" class="img-fluid"/>
+            <img src="./assets/Images/b-final.png" alt="" class="img-fluid w-100"/>
           </div>
          
         </div>
       </div>
+      <section class="theme-section slider-contents">
+        <h2>Suggection</h2>
+        <div class="slider-props">
+          <div class="owl-carousel owl-custom owl-theme">
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./assets/js/jquery-3.7.1.js.js"></script>
     <script src="./assets/js/app.js"></script>
