--- a/index.html
+++ b/index.html
@@ -351,6 +351,201 @@
           </div>
         </div>
       </section>
+      <section class="theme-section checkAreas mt-4">
+        <h2>Check these areas for exclusive deals in Kerala</h2>
+        <div class="gallery mt-4">
+          <div class="card-1">
+            <img src="./assets/Images/px-7.jpg" alt="" class="img-fluid"/>
+          </div>
+          <div class="card-2">
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+            <div class="gridcard">
+              <img src="./assets/Images/px-2.jpg" alt="" class="img-fluid"/>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="theme-section slider-contents mt-2">
+        <h2>For Rent</h2>
+        <div class="slider-props">
+          <div class="owl-carousel owl-custom owl-theme">
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./assets/js/jquery-3.7.1.js.js"></script>
     <script src="./assets/js/app.js"></script>
