home page almost complete

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
          
         </div>
       </div>
-      <section class="theme-section slider-contents">
+      <section class="theme-section slider-contents mt-4">
         <h2>Suggection</h2>
         <div class="slider-props">
           <div class="owl-carousel owl-custom owl-theme">
@@ -379,7 +379,7 @@
           </div>
         </div>
       </section>
-      <section class="theme-section slider-contents mt-2">
+      <section class="theme-section slider-contents mt-4">
         <h2>For Rent</h2>
         <div class="slider-props">
           <div class="owl-carousel owl-custom owl-theme">
@@ -546,7 +546,339 @@
           </div>
         </div>
       </section>
+      <section class="theme-section sellbanner mt-5">
+        <div class="sell-options">
+          <h2>Sell Your Home with Confidence</h2>
+          <p>Are you curious about the precise value of your home or its potential selling price? . Benefit from our extensive expertise in the luxury home market</p>
+        </div>
+        <div class="valueoffIt">
+          <button class="btn btn-border">Book a valuations</button>
+        </div>
+      </section>
+      <section class="theme-section slider-contents mt-3">
+        <h2>For Sale</h2>
+        <div class="slider-props">
+          <div class="owl-carousel owl-custom owl-theme">
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div>
+                      <span class="green-success">Featured</span>
+                    </div>
+                    <div class="notify">
+                      <p>For Sale</p>
+                      <p>Active</p>
+                    </div>
+                  </div>
+                  <div class="profiles">
+                    <div class="images">
+                      <img src="./assets/Images/profile.jpg" class="img-fluid" alt=""/>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-heart"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Villa with Amazing View</h4>
+                  <span>Studio for sale Active</span>
+                  <p>5 Bedroom ,3 Bathrooms Size 250ft2</p>
+                  <div class="price">
+                    <h5>₹ 2000000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="theme-section slider-contents video-contents mt-3">
+        <h2>For Reels</h2>
+        <div class="slider-props">
+          <div class="owl-carousel owl-custom owl-theme">
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div class="contents">
+                      <span class="green-success">
+                        <i class="fas fa-play-circle"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Why Live in Denver</h4>
+                  <span> New York County as whole covers a total area of 33.77squre miles (87.5km2)</span>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div class="contents">
+                      <span class="green-success">
+                        <i class="fas fa-play-circle"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Why Live in Denver</h4>
+                  <span> New York County as whole covers a total area of 33.77squre miles (87.5km2)</span>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div class="contents">
+                      <span class="green-success">
+                        <i class="fas fa-play-circle"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Why Live in Denver</h4>
+                  <span> New York County as whole covers a total area of 33.77squre miles (87.5km2)</span>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div class="contents">
+                      <span class="green-success">
+                        <i class="fas fa-play-circle"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Why Live in Denver</h4>
+                  <span> New York County as whole covers a total area of 33.77squre miles (87.5km2)</span>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="slider-components">
+                <div class="slideritems position-relative">
+                  <img src="./assets/Images/px-1.webp" alt="" class="img-fluid"/>
+                  <div class="card-contents">
+                    <div class="contents">
+                      <span class="green-success">
+                        <i class="fas fa-play-circle"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-details">
+                  <h4>Why Live in Denver</h4>
+                  <span> New York County as whole covers a total area of 33.77squre miles (87.5km2)</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="theme-section slider-contents GetINTOUCh mt-3">
+        <h2>Get In Touch</h2>
+        <div class="row mt-5">
+          <div class="col-md-6 col-12">
+            <div class="GetIn-status">
+              <p>In need of support ?</p>
+              <h3>Get In Touch</h3>
+              <div class="supportTeam">
+                <span>Our dedicated support team is available 24/7 to assist you and answer all your questions</span>
+                <div class="service">
+                  <div class="options">
+                    <div class="icon">
+                      <span><i class="fas fa-phone-square-alt"></i></span>
+                    </div>
+                    <div class="details">
+                      <p>Phone</p>
+                      <span>+1 6363527726</span>
+                    </div>
+                  </div>
+                  <div class="options">
+                    <div class="icon">
+                      <span><i class="fas fa-envelope"></i></span>
+                    </div>
+                    <div class="details">
+                      <p>Email</p>
+                      <span>info@gmail.com</span>
+                    </div>
+                  </div>
+                  <div class="options">
+                    <div class="icon">
+                      <span><i class="fas fa-map-marker-alt"></i></span>
+                    </div>
+                    <div class="details">
+                      <p>Office Address</p>
+                      <span>363635 Office,4644</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-12">
+            <div class="iframes">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31333.240237009184!2d76.46093844999999!3d10.98938995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba87f7f670aa6ad%3A0x3bb7456986f8bc3b!2sMannarkkad%2C%20Kerala!5e0!3m2!1sen!2sin!4v1743952127965!5m2!1sen!2sin" width="100%" height="421" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="social-media">
+        <span><i class="fab fa-facebook"></i></span>
+        <span><i class="fab fa-instagram"></i></span>
+        <span><i class="fab fa-twitter-square"></i></span>
+        <span><i class="fab fa-whatsapp-square"></i></span>
+      </div>
+      <div class=" bottom-footer">
+        <h2>@2026 QuickDeal</h2>
+      </div>
+    </footer>
     <script src="./assets/js/jquery-3.7.1.js.js"></script>
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
